fix: the spacing between items in the bottom cards should use the spacing defined by the vertical content

--- a/editor-components/pricing-table/pricing-table16/pricing-table16.module.scss
+++ b/editor-components/pricing-table/pricing-table16/pricing-table16.module.scss
@@ -165,10 +165,8 @@
                     display: flex;
                     flex-direction: column;
                     flex: 1;
-
                     display: flex;
                     flex-direction: column;
-                    gap: var(--composer-gap-xs);
 
                     .bottom-subtitle,
                     .bottom-title {
